# Rustbin

./: .gitignore  Cargo.toml  build.py  hatch_build.py  pyproject.toml  readme.md
.github/: contributing.md  readme.md
.github/workflows/: make-pypi.yml
rustbin/: __init__.py  __main__.py  build.py
rustman/: __init__.py  __main__.py  build.py  main.rs  shims.py
