[package]
name        = "rustman"
version     = "0.2.0"
authors     = ["Tremeschin"]
description = "Fast rustup shims for python"
repository  = "https://github.com/BrokenSource/Rustman"
readme      = ".github/readme.md"
license     = "MIT OR Apache-2.0"
edition     = "2024"

[[bin]]
name = "rustman"
path = "rustman/main.rs"

[profile.dev]
strip = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
