[project.urls]
GitHub = "https://github.com/BrokenSource/Rustbin"

[project]
name        = "rustbin"
description = "Fast rustup shims for python"
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "1.28.2"
readme      = ".github/readme.md"
license     = {text="MIT OR Apache-2.0"}
requires-python = ">=3.9"

[tool.uv]
check-url = "https://test.pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This package is purely bin files
[tool.hatch.build.targets.wheel]
exclude = ["*"]

[tool.hatch.metadata.hooks.custom]
path = "rustbin/build.py"

[tool.hatch.build.hooks.custom]
path = "rustbin/build.py"
dependencies = [
    # Networking, helpers
    "requests-cache",
    "attrs",
    # Easy cross compilation
    "cargo-zigbuild",
    "ziglang",
]

[dependency-groups]
dev = [
    "requests-cache",
    "hatchling",
    "attrs",
    "uv",
]
