[project.urls]
GitHub = "https://github.com/BrokenSource/Rustbin"

[project]
name        = "rustbin"
description = "Fast rustup shims for python"
authors     = [{name="Tremeschin"}]
version     = "1.28.2"
readme      = "readme.md"
license     = {text="MIT OR Apache-2.0"}
requires-python = ">=3.9"

[tool.uv]
check-url = "https://test.pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This package is purely bin files
[tool.hatch.build.targets.wheel]
exclude = ["*"]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.custom]
path = "rustbin/build.py"
dependencies = [
    "attrs",
    "requests",
    "requests-cache",
]

[tool.ruff.format]
exclude = ["*"]
