[project]
name        = "rustbin"
description = "🦀 Fast rustup shims for python"
authors     = [{name="Tremeschin"}]
version     = "1.29.0"
readme      = "readme.md"
license     = {text="MIT OR Apache-2.0"}
requires-python = ">=3.9"

[project.urls]
GitHub = "https://github.com/BrokenSource/Rustbin"

[tool.uv]
managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This package is purely bin files
[tool.hatch.build.targets.wheel]
exclude = ["*"]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.custom]
dependencies = [
    "attrs",
    "requests",
    "requests-cache",
]
